test: adding command npm test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Appium/Webdriver Project",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "node ./test/specs/test.e2e.js", 
     "wdio": "wdio run ./wdio.conf.js"
   },
   "repository": {
